# JsonParser

./: CMakeLists.txt  README.md
include/core/: FileReader.hpp  Parser.hpp  Tokenizer.hpp
src/: main.cpp
src/core/: ErrorHandler.cpp  FileReader.cpp  Parser.cpp  Tokenizer.cpp
tests/: ParserTests.cpp  TokenizerTests.cpp
